<resources>
    <string name="app_name">NewsApp</string>
    <string name="new_user"><u>New user?</u></string>
    <string name="already_a_user"><u>Already a user</u></string>
    <string name="forget_password"><u>Forget your password?</u></string>
    <string name="remember_me">Remember me</string>
    <string name="general">GENERAL</string>
    <string name="business">BUSINESS</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="health">HEALTH</string>
    <string name="science">SCIENCE</string>
    <string name="sports">SPORTS</string>
    <string name="technology">TECHNOLOGY</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="usa">USA</string>
    <string name="germany">Germany</string>
    <string name="france">France</string>
    <string name="egypt">Egypt</string>
</resources>