<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radio_group"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rb_USA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usa"
            />

        <RadioButton
            android:id="@+id/rb_Germany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/germany"
            />

        <RadioButton
            android:id="@+id/rb_France"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/france"
            />

        <RadioButton
            android:id="@+id/rb_Egypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egypt"
            />

    </RadioGroup>

    <Button
        android:id="@+id/save_btn"
        android:text="Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>